force-app/main/default/objects/Master_Framework__c/Master_Framework__c.object-meta.xml
<CustomObject>
    <description>This object represents Framework related to Opportunity, Enquiry, and Category.</description>
    <label>Framework</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Frameworks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>