force-app/main/default/objects/Master_Framework__c/fields/Award_Date_Target__c.field-meta.xml
<CustomField>
    <fullName>Award_Date_Target__c</fullName>
    <label>Award Date (Target)</label>
    <type>Date</type>
</CustomField>