force-app/main/default/objects/Master_Framework__c/fields/Beyond_Life_Extension__c.field-meta.xml
<CustomField>
    <fullName>Beyond_Life_Extension__c</fullName>
    <label>Beyond Life Extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>