force-app/main/default/objects/Master_Framework__c/fields/Beyond_life_extension_end_date__c.field-meta.xml
<CustomField>
    <fullName>Beyond_life_extension_end_date__c</fullName>
    <description>US0695</description>
    <inlineHelpText>This is an additional field to capture beyond life extensions.  This is an internal field and will not feed to the website</inlineHelpText>
    <label>Beyond Life Extension End Date</label>
    <type>Date</type>
</CustomField>