force-app/main/default/objects/Master_Framework__c/fields/CB_vs_previous_year__c.field-meta.xml
<CustomField>
    <fullName>CB_vs_previous_year__c</fullName>
    <inlineHelpText>If a value is also entered for a specific Lot on this framework, the Lot-level value will take precedence over the value at the framework level.</inlineHelpText>
    <label>Fw. CB vs. previous year</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>