force-app/main/default/objects/Master_Framework__c/fields/CCS_Category__c.field-meta.xml
<CustomField>
    <fullName>CCS_Category__c</fullName>
    <formula>CCS_Sub_Category__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Category</label>
    <type>Text</type>
</CustomField>