force-app/main/default/objects/Master_Framework__c/fields/CCS_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>CCS_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Category object.</description>
    <inlineHelpText>Identifies which CCS Sub Category the framework sits in (will affect all reporting in Data Warehouse)</inlineHelpText>
    <label>CCS Sub Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Category__c.CategoryType__c</field>
            <operation>equals</operation>
            <value>CCS Sub Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Frameworks</relationshipLabel>
    <relationshipName>Master_Framework</relationshipName>
    <type>Lookup</type>
</CustomField>