force-app/main/default/objects/Master_Framework__c/fields/CCS_Sub_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>CCS_Sub_Category_Text__c</fullName>
    <description>This a text version of the CCS Sub Category lookup field and used in the portal to prevent portal users from tryiong to click on the lookup link</description>
    <formula>CCS_Sub_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Sub Category</label>
    <type>Text</type>
</CustomField>