force-app/main/default/objects/Master_Framework__c/fields/CCS_Website_Link__c.field-meta.xml
<CustomField>
    <fullName>CCS_Website_Link__c</fullName>
    <label>CCS Website Link</label>
    <type>Url</type>
</CustomField>