force-app/main/default/objects/Master_Framework__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <description>Field to record &apos;Cost Centre&apos;</description>
    <inlineHelpText>A four character code, in ANNN format, obtainable from CCS Finance.</inlineHelpText>
    <label>Cost Centre</label>
    <length>4</length>
    <type>Text</type>
</CustomField>