force-app/main/default/objects/Master_Framework__c/fields/Count_of_Amendments__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Amendments__c</fullName>
    <label>Count of Amendments</label>
    <summaryForeignKey>Master_Framework_Amendment__c.Master_Framework__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>