force-app/main/default/objects/Master_Framework__c/fields/Create_draft_web_page__c.field-meta.xml
<CustomField>
    <fullName>Create_draft_web_page__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ticking this box will create a draft upcoming deal page for this agreement in the website content management software (CMS). It will not publish the page on the website.</inlineHelpText>
    <label>Create draft web page</label>
    <type>Checkbox</type>
</CustomField>