force-app/main/default/objects/Master_Framework__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Frameworks</relationshipLabel>
    <relationshipName>Frameworks</relationshipName>
    <type>Lookup</type>
</CustomField>