force-app/main/default/objects/Master_Framework__c/fields/Don_t_publish_as_Framework_on_website__c.field-meta.xml
<CustomField>
    <fullName>Don_t_publish_as_Framework_on_website__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check to prevent this from showing as a framework on the website</inlineHelpText>
    <label>Don&apos;t publish Framework on website</label>
    <type>Checkbox</type>
</CustomField>