force-app/main/default/objects/Master_Framework__c/fields/Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_Months__c</fullName>
    <formula>((YEAR(Effective_End_Date__c)-YEAR(Start_Date__c))*12)+ 
(MONTH(Effective_End_Date__c)-MONTH(Start_Date__c))+ 
(IF(OR(IF(DAY(Effective_End_Date__c)&gt;DAY(Start_Date__c), 
DAY(Effective_End_Date__c)-DAY(Start_Date__c),DAY(Start_Date__c)-DAY(Effective_End_Date__c))&gt;15,
IF(DAY(Effective_End_Date__c)&gt;DAY(Start_Date__c),DAY(Effective_End_Date__c)-
DAY(Start_Date__c),DAY(Start_Date__c)-DAY(Effective_End_Date__c))&lt;-15),1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field, calculated automatically  (ensure start date and end date correct)</inlineHelpText>
    <label>Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>