force-app/main/default/objects/Master_Framework__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <formula>IF (ISBLANK( New_End_Date__c ),  Expiry_Date__c  , New_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that show original end date to begin AND updates with new end after a framework extension</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>