force-app/main/default/objects/Master_Framework__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Field for Community layout to show the &apos;Effective End Date&apos;, but we don&apos;t want them to see that wording, so creating this field to copy over the value in a field simply called &apos;End Date&apos;.</description>
    <formula>Effective_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>