force-app/main/default/objects/Master_Framework__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>This is the date this Framework expires</description>
    <inlineHelpText>Date when agreement was originally going to end</inlineHelpText>
    <label>Original End Date</label>
    <type>Date</type>
</CustomField>