force-app/main/default/objects/Master_Framework__c/fields/Extension_Details__c.field-meta.xml
<CustomField>
    <fullName>Extension_Details__c</fullName>
    <inlineHelpText>The extension options available for the Framework</inlineHelpText>
    <label>Extension Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>