force-app/main/default/objects/Master_Framework__c/fields/Extension_Options__c.field-meta.xml
<CustomField>
    <fullName>Extension_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirms an extension is available for the  framework</inlineHelpText>
    <label>Extension Options</label>
    <type>Checkbox</type>
</CustomField>