force-app/main/default/objects/Master_Framework__c/fields/Forecast_Levy_Type__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Levy_Type__c</fullName>
    <label>Forecast Levy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absolute Value</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>