force-app/main/default/objects/Master_Framework__c/fields/Framework_decision_date__c.field-meta.xml
<CustomField>
    <fullName>Framework_decision_date__c</fullName>
    <inlineHelpText>Normally 24 months before the end date</inlineHelpText>
    <label>Framework decision date</label>
    <type>Date</type>
</CustomField>