force-app/main/default/objects/Master_Framework__c/fields/Framework_Live_Date_Target__c.field-meta.xml
<CustomField>
    <fullName>Framework_Live_Date_Target__c</fullName>
    <inlineHelpText>This is the date the FW will be live for Buyers to use and access via the CCS Website Live agreements</inlineHelpText>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>