force-app/main/default/objects/Master_Framework__c/fields/Framework_on_a_Page__c.field-meta.xml
<CustomField>
    <fullName>Framework_on_a_Page__c</fullName>
    <inlineHelpText>A link to the framework on a page that contains specific information regarding the framework including the benefits of the agreement, advice to CXD for promoting the framework, and any frequently asked questions.</inlineHelpText>
    <label>Framework Overview</label>
    <type>Url</type>
</CustomField>