force-app/main/default/objects/Master_Framework__c/fields/Framework_Terms__c.field-meta.xml
<CustomField>
    <fullName>Framework_Terms__c</fullName>
    <inlineHelpText>- DPS details always remain on up and coming deals page until expiry
- Standard this will be displayed on up and coming deals page when the start date is reached
- NEC this will be displayed on up and coming deals page when the start date is reached</inlineHelpText>
    <label>Framework Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>MoU</fullName>
            </value>
            <value>
                <fullName>G-Cloud</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
            </value>
            <value>
                <fullName>NEC &amp; DPS</fullName>
                <isActive>false</isActive>
                <label>NEC &amp; DPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>