force-app/main/default/objects/Master_Framework__c/fields/Full_description_Framework__c.field-meta.xml
<CustomField>
    <fullName>Full_description_Framework__c</fullName>
    <description>Website CMS Field</description>
    <label>Full description (Framework)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>