force-app/main/default/objects/Master_Framework__c/fields/Full_description_Upcoming_deal__c.field-meta.xml
<CustomField>
    <fullName>Full_description_Upcoming_deal__c</fullName>
    <label>Full description (Upcoming deal)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>