force-app/main/default/objects/Master_Framework__c/fields/Future_Framework__c.field-meta.xml
<CustomField>
    <fullName>Future_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Future Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Frameworks</relationshipLabel>
    <relationshipName>Frameworks1</relationshipName>
    <type>Lookup</type>
</CustomField>