force-app/main/default/objects/Master_Framework__c/fields/Go_Live_Passed_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Passed_Boolean__c</fullName>
    <description>Boolean to see if go live date has been reached (used for scheduled flow)</description>
    <formula>TODAY() &gt;= Framework_Live_Date_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Go Live Passed Boolean</label>
    <type>Checkbox</type>
</CustomField>