force-app/main/default/objects/Master_Framework__c/fields/Google_Drive_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Link__c</fullName>
    <label>Google Drive Folder</label>
    <type>Url</type>
</CustomField>