force-app/main/default/objects/Master_Framework__c/fields/Has_Lots__c.field-meta.xml
<CustomField>
    <fullName>Has_Lots__c</fullName>
    <label>Has Lots?</label>
    <summaryFilterItems>
        <field>Master_Framework_Lot__c.Name</field>
        <operation>notEqual</operation>
        <value>Nil Return</value>
    </summaryFilterItems>
    <summaryForeignKey>Master_Framework_Lot__c.Master_Framework__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>