force-app/main/default/objects/Master_Framework__c/fields/How_to_buy__c.field-meta.xml
<CustomField>
    <fullName>How_to_buy__c</fullName>
    <label>How to buy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>