force-app/main/default/objects/Master_Framework__c/fields/Invoicing_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoicing Status</label>
    <type>Checkbox</type>
</CustomField>