force-app/main/default/objects/Master_Framework__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the Framework is currently active</description>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>