force-app/main/default/objects/Master_Framework__c/fields/Keywords_used_for_search__c.field-meta.xml
<CustomField>
    <fullName>Keywords_used_for_search__c</fullName>
    <label>Keywords used for search</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>