force-app/main/default/objects/Master_Framework__c/fields/Last_Lot_Expected__c.field-meta.xml
<CustomField>
    <fullName>Last_Lot_Expected__c</fullName>
    <label>Last Lot Expected</label>
    <summarizedField>Master_Framework_Lot__c.Final_Data_Expected__c</summarizedField>
    <summaryForeignKey>Master_Framework_Lot__c.Master_Framework__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>