force-app/main/default/objects/Master_Framework__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <inlineHelpText>The Framework Name field holds 80 characters and the Framework Name (long) 255 characters. Both the Framework Name and Framework Name (long) fields must be populated.</inlineHelpText>
    <label>Name (long)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>