force-app/main/default/objects/Master_Framework__c/fields/Master_Framework_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_External_Id__c</fullName>
    <description>External Id used as a key against Master Frameworks. This number is not generated by Salesforce and can be used as a reference for external data loads.</description>
    <externalId>true</externalId>
    <label>Master Framework External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>