force-app/main/default/objects/Master_Framework__c/fields/New_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_End_Date__c</fullName>
    <inlineHelpText>End Date of agreement following extension</inlineHelpText>
    <label>New End Date</label>
    <type>Date</type>
</CustomField>