force-app/main/default/objects/Master_Framework__c/fields/OJEU_Date_Target__c.field-meta.xml
<CustomField>
    <fullName>OJEU_Date_Target__c</fullName>
    <inlineHelpText>When reached the agreement will show as &apos;Open&apos; on the Upcoming deals page on website.  Once your agreement shows as open ensure that you have a tender closing date populated also.</inlineHelpText>
    <label>FTS Date (Target)</label>
    <type>Date</type>
</CustomField>