force-app/main/default/objects/Master_Framework__c/fields/Owning_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Owning_Organisation__c</fullName>
    <inlineHelpText>By default frameworks are managed by CCS.  Please select another organisation only where applicable</inlineHelpText>
    <label>Owning Organisation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCS</fullName>
                <default>true</default>
                <label>CCS</label>
            </value>
            <value>
                <fullName>MOD</fullName>
            </value>
            <value>
                <fullName>DWP</fullName>
            </value>
            <value>
                <fullName>ESPO</fullName>
            </value>
            <value>
                <fullName>UKSBS</fullName>
            </value>
            <value>
                <fullName>Workforce Alliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>