force-app/main/default/objects/Master_Framework__c/fields/Percentage_Levy__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Levy__c</fullName>
    <label>Percentage</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>