force-app/main/default/objects/Master_Framework__c/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <formula>CCS_Sub_Category__r.GParent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pillar</label>
    <type>Text</type>
</CustomField>