force-app/main/default/objects/Master_Framework__c/fields/Planned_Date_for_OJEU_Release_Approval__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date_for_OJEU_Release_Approval__c</fullName>
    <label>Planned Date for FTS Release Approval</label>
    <type>Date</type>
</CustomField>