force-app/main/default/objects/Master_Framework__c/fields/Planned_Final_Bus_Case_Approval__c.field-meta.xml
<CustomField>
    <fullName>Planned_Final_Bus_Case_Approval__c</fullName>
    <label>Planned Final Bus Case Approval</label>
    <type>Date</type>
</CustomField>