force-app/main/default/objects/Master_Framework__c/fields/Planned_Intention_to_Award_Approval__c.field-meta.xml
<CustomField>
    <fullName>Planned_Intention_to_Award_Approval__c</fullName>
    <label>Planned Intention to Award Approval</label>
    <type>Date</type>
</CustomField>