force-app/main/default/objects/Master_Framework__c/fields/Previous_Framework__c.field-meta.xml
<CustomField>
    <fullName>Previous_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Frameworks (Previous Framework)</relationshipLabel>
    <relationshipName>Frameworks2</relationshipName>
    <type>Lookup</type>
</CustomField>