force-app/main/default/objects/Master_Framework__c/fields/Products_and_services_all_lot_content__c.field-meta.xml
<CustomField>
    <fullName>Products_and_services_all_lot_content__c</fullName>
    <label>Products and services (all lot content)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>