force-app/main/default/objects/Master_Framework__c/fields/Remaining_Months__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Months__c</fullName>
    <formula>(YEAR(Effective_End_Date__c) * 12 + MONTH(Effective_End_Date__c)) - ( YEAR(Today()) * 12 + MONTH(Today()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>