force-app/main/default/objects/Master_Framework__c/fields/Replacement_Framework_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Framework_Award_Date__c</fullName>
    <label>Replacement Framework Award Date(Target)</label>
    <type>Date</type>
</CustomField>