force-app/main/default/objects/Master_Framework__c/fields/Replacement_or_New_Framework__c.field-meta.xml
<CustomField>
    <fullName>Replacement_or_New_Framework__c</fullName>
    <label>Replacement or New Framework</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>