force-app/main/default/objects/Master_Framework__c/fields/RM_Number__c.field-meta.xml
<CustomField>
    <fullName>RM_Number__c</fullName>
    <description>A unique reference number from the Contract database</description>
    <inlineHelpText>Initial record created by BI through request from Strat Cat (google form)</inlineHelpText>
    <label>RM Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>