force-app/main/default/objects/Master_Framework__c/fields/Spend_Type__c.field-meta.xml
<CustomField>
    <fullName>Spend_Type__c</fullName>
    <label>Spend Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Spend_Type</valueSetName>
    </valueSet>
</CustomField>