force-app/main/default/objects/Master_Framework__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Start date is the award date of your agreement (not the Go Live date)</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>