force-app/main/default/objects/Master_Framework__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>* Live : Open contracts
* Expired : Closed and no more data to be received
* Expired - Data Still Received : Closed to new contracts but still receiving data
* Non CCS Managed : Not managed by CCS
* Cancelled: Cancelled</description>
    <inlineHelpText>* Live : Open contracts
* Expired : Closed and no more data to be received
* Expired - Data Still Received : Closed to new contracts but still receiving data
* Non CCS Managed : Not managed by CCS
* Cancelled: Cancelled</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Future (Pipeline)</fullName>
            </value>
            <value>
                <fullName>Planned (Pipeline)</fullName>
            </value>
            <value>
                <fullName>Underway (Pipeline)</fullName>
            </value>
            <value>
                <fullName>Awarded (Pipeline)</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Expired - Data Still Received</fullName>
            </value>
            <value>
                <fullName>Non CCS Managed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>