force-app/main/default/objects/Master_Framework__c/fields/Status_for_CCS_Portal__c.field-meta.xml
<CustomField>
    <fullName>Status_for_CCS_Portal__c</fullName>
    <formula>IF(
  Create_draft_web_page__c = true,
  null,
IF(
  Start_Date__c &lt;= TODAY() &amp;&amp; NOT(TEXT(Framework_Terms__c) = &quot;DPS&quot;),
  null,
IF(
   Tender_Closing_Date__c &lt;= TODAY(),
  &quot;Closed&quot;,
IF(
  OJEU_Date_Target__c &gt; TODAY(),
  &quot;Planned&quot;,
IF(
  Start_Date__c &gt; TODAY() &amp;&amp; ISBLANK(OJEU_Date_Target__c) &amp;&amp; NOT(TEXT(Framework_Terms__c) = &quot;DPS&quot;),
  &quot;Planned&quot;,
IF(
  OJEU_Date_Target__c &lt;= TODAY() &amp;&amp; Effective_End_Date__c &gt; TODAY() &amp;&amp; TEXT(Framework_Terms__c) = &quot;DPS&quot;,
  &quot;Open&quot;,
IF(
  Start_Date__c &lt;= TODAY() &amp;&amp; Effective_End_Date__c &gt; TODAY() &amp;&amp; TEXT(Framework_Terms__c) = &quot;DPS&quot;,
  &quot;Open&quot;,
IF(
  OJEU_Date_Target__c &lt;= TODAY() &amp;&amp; ISBLANK(Tender_Closing_Date__c),
  &quot;Open&quot;,
IF(
  OJEU_Date_Target__c &lt;= TODAY() &amp;&amp; Tender_Closing_Date__c &gt; TODAY(),
  &quot;Open&quot;,
  null
)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (for CCS Portal)</label>
    <type>Text</type>
</CustomField>