force-app/main/default/objects/Master_Framework__c/fields/Status_Order_for_CCS_Portal__c.field-meta.xml
<CustomField>
    <fullName>Status_Order_for_CCS_Portal__c</fullName>
    <description>This is to help order the Upcoming Deals table</description>
    <formula>IF(
  Status_for_CCS_Portal__c = &quot;Open&quot;,
  1,
IF(
  Status_for_CCS_Portal__c = &quot;Planned&quot;,
  2,
IF(
  Status_for_CCS_Portal__c = &quot;Closed&quot;,
  3,
  null
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Order (for CCS Portal)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>