force-app/main/default/objects/Master_Framework__c/fields/Strategic_Category_Lead__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Category_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Category Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Frameworks</relationshipName>
    <type>Lookup</type>
</CustomField>