force-app/main/default/objects/Master_Framework__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <label>Synopsis</label>
    <type>TextArea</type>
</CustomField>