force-app/main/default/objects/Master_Framework__c/fields/Tender_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Tender_Closing_Date__c</fullName>
    <inlineHelpText>When the date is reached agreement will be shown as &apos;Closed&apos; on Upcoming deals page on website.</inlineHelpText>
    <label>Tender Closing Date</label>
    <type>Date</type>
</CustomField>