force-app/main/default/objects/Master_Framework__c/fields/Upper_OEJU_Framework_Value__c.field-meta.xml
<CustomField>
    <fullName>Upper_OEJU_Framework_Value__c</fullName>
    <label>Upper FTS Framework Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>