force-app/main/default/objects/Master_Framework__c/fields/Year_1__c.field-meta.xml
<CustomField>
    <fullName>Year_1__c</fullName>
    <label>Year 1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>