force-app/main/default/objects/Master_Framework__c/fields/Year_2__c.field-meta.xml
<CustomField>
    <fullName>Year_2__c</fullName>
    <label>Year 2</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>